z-index correction

--- a/src/output.css
+++ b/src/output.css
@@ -634,6 +634,14 @@ video {
   z-index: 100;
 }
 
+.z-\[10000\] {
+  z-index: 10000;
+}
+
+.z-\[5000\] {
+  z-index: 5000;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
